--- a/configs/beat2_rvqvae.yaml
+++ b/configs/beat2_rvqvae.yaml
@@ -1,6 +1,7 @@
 is_train: True
 ddp: False
 stat: ts
+cfg: config/vqvae.yaml
 root_path: ./
 out_path: ./outputs/audio2pose/
 project: s2g
@@ -25,7 +26,7 @@ training_speakers: [2] #[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,2
 additional_data: False
 cache_path: datasets/beat_cache/beat_smplx_en_emage_2_rvqvae/
 dataset: mix_sep
-new_cache: True
+new_cache: False
 use_amass: False
 # motion config
 ori_joints: beat_smplx_joints
