--- a/configs/shortcut_rvqvae_128.yaml
+++ b/configs/shortcut_rvqvae_128.yaml
@@ -47,7 +47,7 @@ training_speakers: [2] #[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,2
 additional_data: False
 cache_path: datasets/beat_cache/beat_smplx_en_emage_2_128/
 dataset: beat_sep_lower
-new_cache: False
+new_cache: True
 
 # motion config
 ori_joints: beat_smplx_joints
